--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,8 +12,11 @@ body{
     text-align: center;
     font-size: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 20px;
 
 }
+
+
 
 /****************************** NavBar Component *********************/
 .navbar{
@@ -30,7 +33,7 @@ body{
 .social-cont{
     color: white;
     font-size: 20px;
-    //margin-left: 10px;
+
 }
 .facebook, .instagram, .twitter{
     margin-left:10px;
@@ -54,4 +57,5 @@ body{
 }
 .footer-cr {
     color:white;
+
 }
